[package]
name = "ux-studio"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
edition = "2018"

[features]
web = ["wasm-bindgen", "wasm-bindgen-futures", "wasm-logger", "gloo", "js-sys", "wasm-bindgen-test"]
cairo = ["cairo-rs", "png", "gio", "gtk", "notify", "clap" ]
default = ["cairo"]

[dependencies]
log = "0.4"
png = { version = "0.16", optional = true }
gio = { version = "0.9", features = ["v2_58"], optional = true }
gtk = { version = "0.9", features = ["v3_22"], optional = true }
cairo-rs = { version = "0.9", features = ["png"], optional = true }
notify = { version = "4.0.15", optional = true }
clap = { version = "2.33", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
gloo = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }

zip = "0.5"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
ux-animate = { path = "../ux-animate" }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
]

[dev-dependencies]


# [[example]]
# name = "web-example"
# # crate-type = ["staticlib"]
# required-features = ["web"]

# [[example]]
# name = "cairo-example"
# required-features = ["cairo"]