[package]
name = "ux-studio"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-studio"
repository = "https://github.com/angular-rust/ux-studio"
documentation = "https://docs.rs/ux-studio"
description = "Code, Layout and Motion Studio"
# keywords = ["gui", "multimedia"]
categories = ["gui", "command-line-utilities", "development-tools", "multimedia", "web-programming"]
edition = "2018"
license = "GPL-3.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
gio = { version = "0.9", features = ["v2_58"] }
cairo-rs = { version = "0.9" }
glib = { version="0.10", features = ["v2_58"] }
gdk = { version="0.13", features = ["v3_22"] }
gdk-pixbuf = "0.9"
notify = { version = "4.0" }
clap = { version = "2.33" }

zip = "0.5"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
ux-dataflow = "0.1"
ux-framework = "0.1"

[dev-dependencies]
